[metadata]
name = counterraid-sorani
version = 1.0.0
author = Sorani
author_email = soran-i@outlook.com
description = CounterRaid is an anti-theft application 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IndioSahota/CounterRaid

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src